# sqlite-fts5-test

./: Cargo.toml
.sqlx/: query-2117f60a46f2bf486600685abc3204d14c93a090dd6922fe01d1de30c0d95f25.json  query-8e715a9c8ffe86e1dab04fea9fc6556b6403a382405b32157768d575f40e7c4a.json  query-a9b4559f3711fe9c92f76256941e928938d77a55ef5dfc4eb24651c56f85d962.json  query-d0068a906ab9e949ceb8ea6ffcbe9930cb8f75934e3612f8294c8234bfadc00e.json
migrations/: 20240606162328_initial.sql
scripts/: update-sqlx-json.sh
src/: cli.rs  database.rs  enron_row.rs  main.rs
