[package]
name = "sqlite-fts5-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = { version = "0.27", optional = false, default-features = false, features = [
     "bundled-sqlcipher-vendored-openssl",
] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.24.2", features = ["full"] }

anyhow = "1"
serde = { version = "1.0.203", features = ["derive"] }
csv = "1.3.0"
clap = { version = "4.5.6", features = ["derive"] }
